--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         integrity="sha512-p1CmNHRbZBz2Qpo0/jztTxFbQ5+iJz8QeZLr/YkfxhA6XY6PkWHkQ06Rkd0j3UzZBHG0kE5fXXY01FzgdP8eFw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Document</title>
+    <title>Dexter Ohaeri Portfolio</title>
 </head>
 
 <body>
@@ -182,5 +182,6 @@
         });
     </script>
     <script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
+
 
 </body>
