--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         integrity="sha512-p1CmNHRbZBz2Qpo0/jztTxFbQ5+iJz8QeZLr/YkfxhA6XY6PkWHkQ06Rkd0j3UzZBHG0kE5fXXY01FzgdP8eFw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Dexter Ohaeri Portfolio</title>
+    <title>Dexter Ohaeri Portfolio </title>
 </head>
 
 <body>
@@ -35,9 +35,10 @@
 
         <ul id="navbar-menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#intro">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="https://www.youtube.com/@DriveFoundation/videos" target="_blank">Resume</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#project-stack">Projects</a></li>
+            <li><a href="Dexter_Ohaeri_Resume.pdf" download class="download-link">Resume</a></li>
+
         </ul>
     </nav>
 
@@ -124,7 +125,7 @@
 
                 <!-- Left Card: Image -->
                 <div class="card Left">
-                    <img src="image/figma.jpg" alt="Figma">
+                    <img src="image/channels-VRI.PNG" alt="Channels Visual Reality Interface">
                 </div>
 
                 <!-- Right Content: Description -->
@@ -141,17 +142,93 @@
                         Station
                         award.
                     </p>
-                    <button>View Project</button>
+                    <a href="https://www.youtube.com/watch?v=P1SSXpNaKBU" target="_blank">
+                        <button>Project Overview</button>
+                    </a>
 
                     <h3>Tools Used</h3>
-                    <img src="image/figma.jpg" width="50px" height="50px" alt="Figma">
+                    <div class="tools-used">
+                        <img src="image/newtek.png" width="50px" height="50px" alt="NewTek">
+                        <img src="image/cinema4d.png" width="50px" height="50px" alt="Cinema 4D">
+                        <img src="image/photoshop.png" width="50px" height="50px" alt="Adobe Creative Suite">
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="content">
+
+                <!-- Left Card: Image -->
+                <div class="card Left">
+                    <img src="image/smartcycle.png" alt="Smart Cycle">
+                </div>
+
+                <!-- Right Content: Description -->
+                <div class="Right">
+                    <h3>Smart Cycle</h3>
+                    <div class="role-line">
+                        <h3>Role</h3>
+                        <p>Product Designer</p>
+                    </div>
+                    <h3>Overview</h3>
+                    <p>
+                        Developed during my graduate program, this smart waste disposal system was designed to enhance
+                        efficiency and promote
+                        sustainable urban waste management.
+                    </p>
+
+                    <a href="https://www.youtube.com/watch?v=CdljHoEs_7w" target="_blank">
+                        <button>Project Overview</button>
+                    </a>
+
+                    <h3>Tools Used</h3>
+
+                    <div class="tools-used">
+                        <img src="image/figma.jpg" width="50px" height="50px" alt="Figma">
+                        <img src="image/dovetail.webp" width="50px" height="50px" alt="Dovetail">
+                        <img src="image/photoshop.png" width="50px" height="50px" alt="Adobe Creative Suite">
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="content">
+
+                <!-- Left Card: Image -->
+                <div class="card Left">
+                    <img src="image/createproject.png" alt="The CREATE Project">
+                </div>
+
+                <!-- Right Content: Description -->
+                <div class="Right">
+                    <h3>The CREATE Project </h3>
+                    <div class="role-line">
+                        <h3>Role</h3>
+                        <p>Brand Designer</p>
+                    </div>
+                    <h3>Overview</h3>
+                    <p>
+                        Designed and established the design system and assets for the CREATE project, implemented across
+                        online brand identity,
+                        social media content, digital programs, and offline print materials.
+                    </p>
+
+                    <a href="https://sites.bsu.edu/civics/create/" target="_blank">
+                        <button>Project Overview</button>
+                    </a>
+
+                    <h3>Tools Used</h3>
+                    <div class="tools-used">
+                        <img src="image/figma.jpg" width="50px" height="50px" alt="Figma">
+                        <img src="image/premier-pro.png" width="50px" height="50px" alt="Premiere Pro">
+                        <img src="image/photoshop.png" width="50px" height="50px" alt="Adobe Creative Suite">
+                        <img src="image/davinci.png" width="50px" height="50px" alt="DaVinci Resolve">
+                    </div>
                 </div>
 
             </div>
         </div>
-
-
-
 
         <div id="subscribe">
 
@@ -162,7 +239,9 @@
 
             </p>
 
-            <button> Contact Me </button>
+            <a href="mailto:powerproject360@gmail.com" class="email-link">
+                <button id="contact-me">Contact Me</button>
+            </a>
 
         </div>
 
@@ -182,6 +261,5 @@
         });
     </script>
     <script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
-
 
 </body>
