--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                 <!-- Left Card: Image -->
                 <div class="card Left">
-                    <img src="image/channels-VRI.PNG" alt="Channels Visual Reality Interface">
+                    <img src="image/channels-VRI.png" alt="Channels Visual Reality Interface">
                 </div>
 
                 <!-- Right Content: Description -->
@@ -263,3 +263,4 @@
     <script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
 
 </body>
+
