--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="card-content">UI/UX Design</div>
                 </div>
                 <div class="card card-image card-bg-media">
-                    <div class="card-content">Media Production</div>
+                    <a href="https://www.youtube.com/playlist?list=PLdcS8OfqIxEtatV7i1FHf3g0UzKpoaqU2" target="_blank"><div class="card-content">Media Production</div> </a>
                 </div>
                 <div class="card card-image card-bg-learning">
                     <div class="card-content">Education & Learning Development</div>
@@ -263,4 +263,5 @@
     <script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
 
 </body>
+
 
