--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
             </p>
 
-            <a href="mailto:powerproject360@gmail.com" class="email-link">
+            <a onclick="window.location.href='mailto:someone@example.com'" class="email-link">
                 <button id="contact-me">Contact Me</button>
             </a>
 
@@ -263,5 +263,6 @@
     <script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
 
 </body>
+
 
 
