--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#project-stack">Projects</a></li>
-            <li><a href="Dexter_O_Resume __.pdf" download class="download-link">Resume</a></li>
+            <li><a href="https://github.com/powerhub360/DexterOhaeriPortfolio/blob/main/Dexter_O_Resume%20__.pdf" download class="download-link">Resume</a></li>
 
         </ul>
     </nav>
@@ -263,6 +263,7 @@
     <script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
 
 </body>
+
 
 
 
