--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
 
             </p>
 
-            <a onclick="window.location.href='mailto:someone@example.com'" class="email-link">
-                <button id="contact-me">Contact Me</button>
+            <a class="email-link">
+                <button onclick="window.location.href='mailto:someone@example.com'" id="contact-me">Contact Me</button>
             </a>
 
         </div>
@@ -263,6 +263,7 @@
     <script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
 
 </body>
+
 
 
 
