--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </p>
 
             <a class="email-link">
-                <button onclick="window.location.href='mailto:someone@example.com'" id="contact-me">Contact Me</button>
+                <button onclick="window.open('https://mail.google.com/mail/?view=cm&fs=1&to=test@example.com&su=Hello&body=Hi%20there!')">Contact Me</button>
             </a>
 
         </div>
@@ -263,6 +263,7 @@
     <script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
 
 </body>
+
 
 
 
